--- a/wwr/about.html
+++ b/wwr/about.html
@@ -78,7 +78,7 @@
 
     <!-- Footer -->
    
-        <p>&copy; 2024 Rafting Adventure | Created by [Student's Name]</p>
+        <p>&copy; 2024 Rafting Adventure | Created by Alexandre jiresse lusa</p>
         <div class="social-links">
             <a href="https://web.facebook.com/photo/?fbid=122130159392378381&set=a.122102584004378381&__tn__=%3C"><img src="images/facebook-64.webp" alt="Facebook"></a>
             <a href="#"><img src="images/2_social-64.webp" alt="Twitter"></a>
