--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,8 +38,8 @@
                 <p>Come live an unforgettable adventure in the wild, through thrilling rapids.</p>
             </article>
         </div>
-        <center><h1>history</h1>
-            <center><h2>Whether you're with friends or family, paddling in unison strengthens bonds.</h2>
+        <h1>history</h1>
+            <h2>Whether you're with friends or family, paddling in unison strengthens bonds.</h2>
 
         <section class="historique">
             <p class="texte-gauche">Rafting is more than an adventure—it's a thrilling challenge in nature. Imagine navigating wild rapids, paddling in sync with your team, and feeling the rush of adrenaline. With expert guides ensuring safety, every rapid tests your skill, while breathtaking landscapes unfold around you, making the experience unforgettable.</p>
