--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,7 +22,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <img src="images/image.jpg" alt="Rafting Adventure" class="hero-image">
+        <img src="images/image12.jpeg" alt="Rafting Adventure" class="hero-image">
         <div class="hero-text">
             <h1>Embark on the Ultimate White-Water Rafting Adventure</h1>
             <p>Experience the thrill of nature's rapids like never before.</p>
@@ -53,12 +53,12 @@
     <!-- Grid Layout for Content -->
     <section class="content-grid">
         <div class="grid-item">
-            <img src="offer1.jpg" alt="Rafting Gear">
+            <img src="images/image10.jpg" alt="Rafting Gear">
             <h3>Rafting Gear</h3>
             <p>Explore our range of premium rafting equipment for a safe and thrilling ride.</p>
         </div>
         <div class="grid-item">
-            <img src="offer2.jpg" alt="Safety Training">
+            <img src="images/image11.jpeg" alt="Safety Training">
             <h3>Safety Training</h3>
             <p>Join our expert-led training sessions and ensure your safety on the rapids.</p>
         </div>
