--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -41,17 +41,17 @@
         <section class="trips">
             <div class="trip">
                 <h2>Adventure Rapids - 2 Days</h2>
-                <img src="images/rafting1.jpg" alt="Rafting on Adventure Rapids">
+                <img src="images/image.jpg" alt="Rafting on Adventure Rapids">
                 <p>Join us on an exhilarating 2-day rafting journey through Class 4 rapids. Ideal for adventure seekers looking for a challenge!</p>
             </div>
             <div class="trip">
                 <h2>Family Fun - 1 Day</h2>
-                <img src="images/rafting2.jpg" alt="Rafting with Family Fun">
+                <img src="images/image11.jpeg" alt="Rafting with Family Fun">
                 <p>This one-day rafting trip is perfect for families and beginners. Enjoy mild rapids and breathtaking scenery in a safe and relaxing environment.</p>
             </div>
             <div class="trip">
                 <h2>Extreme Challenge - 3 Days</h2>
-                <img src="images/rafting3.jpg" alt="Extreme Rafting Challenge">
+                <img src="images/image10.jpg" alt="Extreme Rafting Challenge">
                 <p>Push your limits with our 3-day extreme rafting experience. Conquer wild rapids and camp in the heart of nature, surrounded by stunning landscapes.</p>
             </div>
         </section>
