--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,10 +21,10 @@
         <nav>
             <nav class="navigation"></nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">about us</a></li>
-                <li><a href="#">Trips</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">about us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
