--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -25,10 +25,10 @@
         <nav>
             <nav class="navigation"></nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">about us</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">about us</a></li>
+                <li><a href="trips.html">trips</a></li>
+                <li><a href="contact.html">Contact us</a></li>
                 <section class="contact-info">
 
                     <address>
