--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rafting Adventure</title>
     <link rel="stylesheet" href="styles/rafting.css">
-
-
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
-   
 </head>
 <body>
 
@@ -19,71 +16,81 @@
             <img src="images/logo.png" alt="Rafting Adventure Logo">
         </div>
         <nav>
-            <nav class="navigation"></nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">about us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Main Content -->
     <main>
+        <!-- Hero Section -->
         <div class="hero">
-            <h1> white weter Rafting</h1>
+            <h1>White Water Rafting</h1>
             <article>
+                <h2>What is White Water Rafting?</h2>
+                <p>White Water Rafting is an exhilarating adventure that plunges you into the heart of wild rapids. Perfect for thrill-seekers, this activity involves navigating in a group on fast-flowing rivers, facing waves and natural obstacles. Whether you're a beginner or an experienced adventurer, rafting on whitewater promises an unforgettable experience filled with excitement and camaraderie.</p>
                 <img src="images/image1.jpg" alt="Rafting Image">
                 <p>Come live an unforgettable adventure in the wild, through thrilling rapids.</p>
             </article>
         </div>
-        <h1>history</h1>
-            <h2>Whether you're with friends or family, paddling in unison strengthens bonds.</h2>
 
-        <section class="historique">
-            <p class="texte-gauche">Rafting is more than an adventure—it's a thrilling challenge in nature. Imagine navigating wild rapids, paddling in sync with your team, and feeling the rush of adrenaline. With expert guides ensuring safety, every rapid tests your skill, while breathtaking landscapes unfold around you, making the experience unforgettable.</p>
+        <!-- History Section -->
+        <section class="history">
+            <h2>History of Rafting</h2>
+            <h3>Whether you're with friends or family, paddling in unison strengthens bonds.</h3>
+            <p>Rafting is more than just an adventure—it's a thrilling challenge in nature. Imagine navigating wild rapids, paddling in sync with your team, and feeling the rush of adrenaline. With expert guides ensuring your safety, every rapid tests your skills, while breathtaking landscapes unfold around you, making the experience unforgettable.</p>
             <div class="photo">
-                <h1>
-             <center><img src="images/image2.jpg" alt="History Photo" />
+                <img src="images/image2.jpg" alt="History Photo" />
             </div>
-            <p class="texte-droite">Rafting is a perfect blend of adventure and nature. As you navigate fast-moving rapids, adrenaline surges through you. The rush of water and teamwork creates a thrilling experience. Expert guides lead the way, ensuring safety while you conquer waves and explore scenic landscapes, making it an unforgettable adventure</p>.</p>
-            <footer>
-            <section class="adventure">
-                <h2>Adventure Awaits You</h2>
-                <div class="adventure-images">
-                    <figure>
-                        <img src="images/image3.jpg" alt="Los Dientes del Diablo">
-                        <figcaption>Los Dientes del Diablo</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/image0.jpg" alt="Big Mallard">
-                        <figcaption>Big Mallard</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/image.jpg" alt="Half Day Adventure">
-                        <figcaption>Half Day Adventure</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/image4.jpg" alt="Thunder Rapids">
-                        <figcaption>Thunder Rapids</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/image5.jpg" alt="Wild River Escape">
-                        <figcaption>Wild River Escape</figcaption>
-                    </figure>
-                </div>
-            </section>
+            <p>Rafting is a perfect blend of adventure and nature. As you navigate fast-moving rapids, adrenaline surges through you. The rush of water and teamwork creates a thrilling experience. Expert guides lead the way, ensuring safety while you conquer waves and explore scenic landscapes, making it an unforgettable adventure.</p>
+        </section>
+
+        <!-- Adventure Section -->
+        <section class="adventure">
+            <h2>Adventure Awaits You</h2>
+            <div class="adventure-images">
+                <figure>
+                    <img src="images/image3.jpg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/image0.jpg" alt="Big Mallard">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/image.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/image4.jpg" alt="Thunder Rapids">
+                    <figcaption>Thunder Rapids</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/image5.jpg" alt="Wild River Escape">
+                    <figcaption>Wild River Escape</figcaption>
+                </figure>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
-   
-        <p>&copy; 2024 Rafting Adventure  Created by Alexandre jiresse lusa</p>
+    <footer>
+        <p>&copy; 2024 Rafting Adventure | Created by Alexandre Jiresse Lusa</p>
         <div class="social-links">
-            <a href="https://web.facebook.com/photo/?fbid=122130159392378381&set=a.122102584004378381&__tn__=%3C"><img src="images/facebook-64.webp" alt="Facebook"></a>
-            <a href="#"><img src="images/2_social-64.webp" alt="Twitter"></a>
-            <a href="#"><img src="images/25_social-64.webp" alt="Instagram"></a>
+            <a href="https://web.facebook.com/photo/?fbid=122130159392378381&set=a.122102584004378381&__tn__=%3C">
+                <img src="images/facebook-64.webp" alt="Facebook">
+            </a>
+            <a href="#">
+                <img src="images/2_social-64.webp" alt="Twitter">
+            </a>
+            <a href="#">
+                <img src="images/25_social-64.webp" alt="Instagram">
+            </a>
         </div>
     </footer>
+
 </body>
 </html>
