--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">trips</a></li>
+                <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
@@ -33,7 +33,6 @@
         <section class="trip-introduction">
             <h1>Our Rafting Adventures</h1>
             <p>Discover the thrill of white-water rafting! Whether you're a beginner or an experienced rafter, we have a trip for you. Below you'll find our exciting packages and details on each rafting adventure.</p>
-
             <a href="contact.html" class="cta-button">Contact Us for More Information</a>
         </section>
 
@@ -93,6 +92,7 @@
 
         <!-- Link to Wireframe Image -->
         <section class="wireframe-link">
+            <h2>Wireframe Link</h2> <!-- Added a heading to this section -->
             <p>View the wireframe for this page: <a href="images/wwr/wireframe.jpg" target="_blank">Wireframe</a></p>
         </section>
     </main>
