--- a/wwr/index.html
+++ b/wwr/index.html
@@ -51,22 +51,36 @@
     </section>
 
     <!-- Grid Layout for Content -->
-    <section class="content-grid">
-        <div class="grid-item">
-            <img src="images/image10.jpg" alt="Rafting Gear">
-            <h3>Rafting Gear</h3>
-            <p>Explore our range of premium rafting equipment for a safe and thrilling ride.</p>
-        </div>
-        <div class="grid-item">
+<section class="content-grid">
+    <div class="grid-item">
+        <figure>
+            <img src="images/image9.jpg" alt="Rafting Gear">
+            <figcaption>
+                <h3>Rafting Gear</h3>
+                <p>Explore our range of premium rafting equipment for a safe and thrilling ride.</p>
+            </figcaption>
+        </figure>
+    </div>
+    <div class="grid-item">
+        <figure>
             <img src="images/image11.jpeg" alt="Safety Training">
-            <h3>Safety Training</h3>
-            <p>Join our expert-led training sessions and ensure your safety on the rapids.</p>
-        </div>
-    </section>
+            <figcaption>
+                <h3>Safety Training</h3>
+                <p>Join our expert-led training sessions and ensure your safety on the rapids.</p>
+            </figcaption>
+        </figure>
+    </div>
+</section>
 
     <!-- Footer Section -->
     <footer>
+
         <p>&copy; 2024 White Water Rafting Adventures | All Rights Reserved</p>
+        <div class="social-links">
+            <a href="https://web.facebook.com/photo/?fbid=122130159392378381&set=a.122102584004378381&__tn__=%3C"><img src="images/facebook-64.webp" alt="Facebook"></a>
+            <a href="#"><img src="images/2_social-64.webp" alt="Twitter"></a>
+            <a href="#"><img src="images/25_social-64.webp" alt="Instagram"></a>
+        </div>
     </footer>
 
 </body>
