--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -52,8 +52,10 @@
                 <h2>Extreme Challenge - 3 Days</h2>
                 <img src="images/image10.jpg" alt="Extreme Rafting Challenge">
                 <p>Push your limits with our 3-day extreme rafting experience. Conquer wild rapids and camp in the heart of nature, surrounded by stunning landscapes.</p>
+                <section>
+                    <a href="contact.html" class="cta-button">Book Your Adventure Now</a>
+                </section>
             </div>
-        </section>
 
         <!-- Table of All Available Trips -->
         <section class="trips-table">
@@ -92,8 +94,8 @@
 
         <!-- Link to Wireframe Image -->
         <section class="wireframe-link">
-            <h2>Wireframe Link</h2> <!-- Added a heading to this section -->
-            <p>View the wireframe for this page: <a href="images/wwr/wireframe.jpg" target="_blank">Wireframe</a></p>
+            <h2></h2> <!-- Added a heading to this section -->
+            <p> <a href="images/wwr/wireframe.jpg" target="_blank"></a></p>
         </section>
     </main>
 
